turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:15: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color);
        ^